# Obsession

./: READMDE.md  db.sqlite3  pyproject.toml
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
